fix button overlap bug

--- a/styles.css
+++ b/styles.css
@@ -108,13 +108,6 @@ a.button:hover, #add-to-cart:hover {
     color: white;
 }
 
-.selected-size {
-    background-color: #333;
-    font-size: 45px;
-}
-
-
-
 .product-image {
     height: 75%;
 }
@@ -171,6 +164,12 @@ a.button:hover, #add-to-cart:hover {
 }
 
 .box.selected-color {
+    font-size: 45px;
+    border: 5px solid black;
+}
+
+.box.selected-size {
+    background-color: #333;
     font-size: 45px;
     border: 5px solid black;
 }
